{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 587,
  "lineage": "60ae7e11-6f7c-fd35-5a69-0fc432453353",
  "resources": [
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096679db8ea83149e",
            "arn": "arn:aws:ec2:ca-west-1:285942939694:elastic-ip/eipalloc-096679db8ea83149e",
            "association_id": "eipassoc-0255655a68f757609",
            "domain": "vpc",
            "id": "eipalloc-096679db8ea83149e",
            "network_border_group": "ca-west-1",
            "network_interface": "eni-08ee2165d3dd21eec",
            "private_dns": "ip-172-17-5-154.ca-west-1.compute.internal",
            "private_ip": "172.17.5.154",
            "public_dns": "ec2-40-176-169-226.ca-west-1.compute.amazonaws.com",
            "public_ip": "40.176.169.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Description": "Routes internal traffic to the internet through public subnet in AZ a",
              "ManagedBy": "Terraform",
              "Name": "vpc-ca-west-1-eip-az-a"
            },
            "tags_all": {
              "Description": "Routes internal traffic to the internet through public subnet in AZ a",
              "ManagedBy": "Terraform",
              "Name": "vpc-ca-west-1-eip-az-a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ca_west_1.aws_internet_gateway.main",
            "module.ca_west_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:internet-gateway/igw-02de8b1b5bf825bca",
            "id": "igw-02de8b1b5bf825bca",
            "owner_id": "285942939694",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "vpc-ca-west-1-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "vpc-ca-west-1-igw"
            },
            "vpc_id": "vpc-0913078db96c40076"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "from_frankfurt_to_app_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:targetgroup/app-alb-tg/96ca5b8d1be37034",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener-rule/app/app-alb/b2dd20f157bb5da6/fa331d6ad834ff57/d837bf2aa600361b",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "eu.cloudpedia.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener-rule/app/app-alb/b2dd20f157bb5da6/fa331d6ad834ff57/d837bf2aa600361b",
            "listener_arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener/app/app-alb/b2dd20f157bb5da6/fa331d6ad834ff57",
            "priority": 2,
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_acm_certificate.app",
            "module.ca_west_1.aws_acm_certificate_validation.app",
            "module.ca_west_1.aws_lb_target_group.app_alb_tg",
            "module.ca_west_1.aws_route53_record.domain_validation",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_lb.main",
            "module.ca_west_1.module.app_alb.aws_lb_listener.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_http_port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener-rule/app/app-alb/b2dd20f157bb5da6/f1c4eb47f48bf5d2/d2d42a47a22fa428",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ca.cloudpedia.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener-rule/app/app-alb/b2dd20f157bb5da6/f1c4eb47f48bf5d2/d2d42a47a22fa428",
            "listener_arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener/app/app-alb/b2dd20f157bb5da6/f1c4eb47f48bf5d2",
            "priority": 1,
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_acm_certificate.app",
            "module.ca_west_1.aws_acm_certificate_validation.app",
            "module.ca_west_1.aws_route53_record.domain_validation",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_lb.main",
            "module.ca_west_1.module.app_alb.aws_lb_listener.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "to_app_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:targetgroup/app-alb-tg/96ca5b8d1be37034",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener-rule/app/app-alb/b2dd20f157bb5da6/fa331d6ad834ff57/56014f5a263bc5d5",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ca.cloudpedia.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener-rule/app/app-alb/b2dd20f157bb5da6/fa331d6ad834ff57/56014f5a263bc5d5",
            "listener_arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener/app/app-alb/b2dd20f157bb5da6/fa331d6ad834ff57",
            "priority": 1,
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_acm_certificate.app",
            "module.ca_west_1.aws_acm_certificate_validation.app",
            "module.ca_west_1.aws_lb_target_group.app_alb_tg",
            "module.ca_west_1.aws_route53_record.domain_validation",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_lb.main",
            "module.ca_west_1.module.app_alb.aws_lb_listener.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:targetgroup/app-alb-tg/96ca5b8d1be37034",
            "arn_suffix": "targetgroup/app-alb-tg/96ca5b8d1be37034",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:targetgroup/app-alb-tg/96ca5b8d1be37034",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-west-1:285942939694:loadbalancer/app/app-alb/b2dd20f157bb5da6"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0913078db96c40076"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096679db8ea83149e",
            "association_id": "eipassoc-0255655a68f757609",
            "connectivity_type": "public",
            "id": "nat-0b7b0f392d8d5d552",
            "network_interface_id": "eni-08ee2165d3dd21eec",
            "private_ip": "172.17.5.154",
            "public_ip": "40.176.169.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cf3fa784caca356",
            "tags": {
              "Description": "Nat Gateway routes internal traffic to internet through public subnet in AZ a",
              "ManagedBy": "Terraform",
              "Name": "vpc-ca-west-1-nat-az-a"
            },
            "tags_all": {
              "Description": "Nat Gateway routes internal traffic to internet through public subnet in AZ a",
              "ManagedBy": "Terraform",
              "Name": "vpc-ca-west-1-nat-az-a"
            }
          },
          "dependencies": [
            "module.ca_west_1.aws_eip.main",
            "module.ca_west_1.aws_internet_gateway.main",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3041309371",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-076b1ca47a34caba5",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_network_acl.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-523181287",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e0d6db61f8a7259",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.17.0.0/20",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2134353931",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-076b1ca47a34caba5",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_network_acl.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "200",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2310680605",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-076b1ca47a34caba5",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_network_acl.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "300",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2656660646",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-076b1ca47a34caba5",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 300,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_network_acl.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-490790010",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-01e0d6db61f8a7259",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_to_external_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02d9e0b844858daab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7b0f392d8d5d552",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d9e0b844858daab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_eip.main",
            "module.ca_west_1.aws_internet_gateway.main",
            "module.ca_west_1.aws_nat_gateway.main",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_route_table.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a0daaf39151b2901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b7b0f392d8d5d552",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a0daaf39151b290",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_eip.main",
            "module.ca_west_1.aws_internet_gateway.main",
            "module.ca_west_1.aws_nat_gateway.main",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_route_table.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnet_to_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02de8b1b5bf825bca",
            "id": "r-rtb-06aa09fa292b621281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06aa09fa292b62128",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_internet_gateway.main",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02de8b1b5bf825bca",
            "id": "r-rtb-0542c00a0ac4edd6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0542c00a0ac4edd6e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_internet_gateway.main",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_app_fleet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.17.0.0/23",
              "172.17.2.0/23"
            ],
            "description": "Allow egress access to app_fleet",
            "from_port": 80,
            "id": "sgrule-2147439031",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ce8022f51fc4597",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:vpc/vpc-0913078db96c40076",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/20",
            "default_network_acl_id": "acl-0bd9800299f726444",
            "default_route_table_id": "rtb-03c587df5c113422a",
            "default_security_group_id": "sg-0b9aacc4da98f17a6",
            "dhcp_options_id": "dopt-0afa8744a5d03da6b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0913078db96c40076",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c587df5c113422a",
            "owner_id": "285942939694",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "vpc-ca-west-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "vpc-ca-west-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.app_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:loadbalancer/app/app-alb/b2dd20f157bb5da6",
            "arn_suffix": "app/app-alb/b2dd20f157bb5da6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-1097455828.ca-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:loadbalancer/app/app-alb/b2dd20f157bb5da6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00ce8022f51fc4597"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01cf3fa784caca356"
              },
              {
                "subnet_id": "subnet-09dde14708ae04c3a"
              }
            ],
            "subnets": [
              "subnet-01cf3fa784caca356",
              "subnet-09dde14708ae04c3a"
            ],
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "vpc_id": "vpc-0913078db96c40076",
            "xff_header_processing_mode": "append",
            "zone_id": "Z06473681N0SF6OS049SD"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.app_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "http_port_443",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener/app/app-alb/b2dd20f157bb5da6/fa331d6ad834ff57",
            "certificate_arn": "arn:aws:acm:ca-west-1:285942939694:certificate/486728b5-40fb-4120-8dcd-f9448f4bbecd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener/app/app-alb/b2dd20f157bb5da6/fa331d6ad834ff57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:loadbalancer/app/app-alb/b2dd20f157bb5da6",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_acm_certificate.app",
            "module.ca_west_1.aws_acm_certificate_validation.app",
            "module.ca_west_1.aws_route53_record.domain_validation",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_lb.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "http_port_80",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener/app/app-alb/b2dd20f157bb5da6/f1c4eb47f48bf5d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:listener/app/app-alb/b2dd20f157bb5da6/f1c4eb47f48bf5d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-west-1:285942939694:loadbalancer/app/app-alb/b2dd20f157bb5da6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_acm_certificate.app",
            "module.ca_west_1.aws_acm_certificate_validation.app",
            "module.ca_west_1.aws_route53_record.domain_validation",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_lb.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.app_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:security-group/sg-00ce8022f51fc4597",
            "description": "Security group for app-alb applicaion load-balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "172.17.0.0/23",
                  "172.17.2.0/23"
                ],
                "description": "Allow egress access to app_fleet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-00ce8022f51fc4597",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rule for http_port_443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rule for http_port_80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-alb-sg20240329175102978500000006",
            "name_prefix": "app-alb-sg",
            "owner_id": "285942939694",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "app-alb-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0913078db96c40076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.app_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "http_port_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress rule for http_port_443",
            "from_port": 443,
            "id": "sgrule-1464901407",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ce8022f51fc4597",
            "security_group_rule_id": "sgr-0dd92d39e136f8bb6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_acm_certificate.app",
            "module.ca_west_1.aws_acm_certificate_validation.app",
            "module.ca_west_1.aws_route53_record.domain_validation",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "http_port_80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress rule for http_port_80",
            "from_port": 80,
            "id": "sgrule-2022289636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ce8022f51fc4597",
            "security_group_rule_id": "sgr-05b4a6d08870763e0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_acm_certificate.app",
            "module.ca_west_1.aws_acm_certificate_validation.app",
            "module.ca_west_1.aws_route53_record.domain_validation",
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_alb.aws_security_group.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.app_fleet",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:security-group/sg-0579967c72a899663",
            "description": "Security group for app-fleet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound requests from the resources",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0579967c72a899663",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "manually added",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.17.0.0/20"
                ],
                "description": "Ingress rule for allow_app_port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-fleet-sg",
            "name_prefix": "",
            "owner_id": "285942939694",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "app-fleet-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "app-fleet-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0913078db96c40076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.app_fleet",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound requests from the resources",
            "from_port": 0,
            "id": "sgrule-1701560660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0579967c72a899663",
            "security_group_rule_id": "sgr-063d943f32ec0cf7b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_fleet.aws_security_group.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.app_fleet",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "allow_app_port",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.17.0.0/20"
            ],
            "description": "Ingress rule for allow_app_port",
            "from_port": 80,
            "id": "sgrule-1791480879",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0579967c72a899663",
            "security_group_rule_id": "sgr-0cd6834d83b8fcf2d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.app_fleet.aws_security_group.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.private_subnet",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:network-acl/acl-076b1ca47a34caba5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-076b1ca47a34caba5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "172.17.0.0/20",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "285942939694",
            "subnet_ids": [
              "subnet-0001e95f875079043",
              "subnet-0c33e7bd4930320f9"
            ],
            "tags": {
              "Description": "ACL for private-subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-acl"
            },
            "tags_all": {
              "Description": "ACL for private-subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-acl"
            },
            "vpc_id": "vpc-0913078db96c40076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:route-table/rtb-02d9e0b844858daab",
            "id": "rtb-02d9e0b844858daab",
            "owner_id": "285942939694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7b0f392d8d5d552",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
              }
            ],
            "tags": {
              "Description": "Route table for private-subnet-a subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-a-route-table"
            },
            "tags_all": {
              "Description": "Route table for private-subnet-a subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-a-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0913078db96c40076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:route-table/rtb-05a0daaf39151b290",
            "id": "rtb-05a0daaf39151b290",
            "owner_id": "285942939694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7b0f392d8d5d552",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route table for private-subnet-b subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-b-route-table"
            },
            "tags_all": {
              "Description": "Route table for private-subnet-b subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-b-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0913078db96c40076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2aba12f36518e2a",
            "route_table_id": "rtb-02d9e0b844858daab",
            "subnet_id": "subnet-0c33e7bd4930320f9"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_route_table.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056dad8d43206e06a",
            "route_table_id": "rtb-05a0daaf39151b290",
            "subnet_id": "subnet-0001e95f875079043"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.aws_route_table.main",
            "module.ca_west_1.module.private_subnet.aws_subnet.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:subnet/subnet-0c33e7bd4930320f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1a",
            "availability_zone_id": "caw1-az1",
            "cidr_block": "172.17.0.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c33e7bd4930320f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285942939694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-ca-west-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-ca-west-1a"
            },
            "vpc_id": "vpc-0913078db96c40076"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:subnet/subnet-0001e95f875079043",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1b",
            "availability_zone_id": "caw1-az2",
            "cidr_block": "172.17.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0001e95f875079043",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285942939694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-ca-west-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-ca-west-1b"
            },
            "vpc_id": "vpc-0913078db96c40076"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.public_subnet",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:network-acl/acl-01e0d6db61f8a7259",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01e0d6db61f8a7259",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "285942939694",
            "subnet_ids": [
              "subnet-01cf3fa784caca356",
              "subnet-09dde14708ae04c3a"
            ],
            "tags": {
              "Description": "ACL for public-subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-acl"
            },
            "tags_all": {
              "Description": "ACL for public-subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-acl"
            },
            "vpc_id": "vpc-0913078db96c40076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:route-table/rtb-06aa09fa292b62128",
            "id": "rtb-06aa09fa292b62128",
            "owner_id": "285942939694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02de8b1b5bf825bca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
              }
            ],
            "tags": {
              "Description": "Route table for public-subnet-a subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-a-route-table"
            },
            "tags_all": {
              "Description": "Route table for public-subnet-a subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-a-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0913078db96c40076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:route-table/rtb-0542c00a0ac4edd6e",
            "id": "rtb-0542c00a0ac4edd6e",
            "owner_id": "285942939694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02de8b1b5bf825bca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
              }
            ],
            "tags": {
              "Description": "Route table for public-subnet-b subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-b-route-table"
            },
            "tags_all": {
              "Description": "Route table for public-subnet-b subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-b-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0913078db96c40076"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065db8673ac72bf5b",
            "route_table_id": "rtb-06aa09fa292b62128",
            "subnet_id": "subnet-01cf3fa784caca356"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9e9a1fa524bf5a2",
            "route_table_id": "rtb-0542c00a0ac4edd6e",
            "subnet_id": "subnet-09dde14708ae04c3a"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ca_west_1.module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:subnet/subnet-01cf3fa784caca356",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1a",
            "availability_zone_id": "caw1-az1",
            "cidr_block": "172.17.4.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cf3fa784caca356",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285942939694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-ca-west-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-ca-west-1a"
            },
            "vpc_id": "vpc-0913078db96c40076"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:285942939694:subnet/subnet-09dde14708ae04c3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1b",
            "availability_zone_id": "caw1-az2",
            "cidr_block": "172.17.6.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dde14708ae04c3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285942939694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-ca-west-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-ca-west-1b"
            },
            "vpc_id": "vpc-0913078db96c40076"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1fd8273a2391683",
            "arn": "arn:aws:ec2:eu-central-1:285942939694:elastic-ip/eipalloc-0b1fd8273a2391683",
            "association_id": "eipassoc-0b8bb28ccbf739905",
            "domain": "vpc",
            "id": "eipalloc-0b1fd8273a2391683",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-014171acc0c64835d",
            "private_dns": "ip-192-168-5-185.eu-central-1.compute.internal",
            "private_ip": "192.168.5.185",
            "public_dns": "ec2-3-78-102-126.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.102.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Description": "Routes internal traffic to the internet through public subnet in AZ a",
              "ManagedBy": "Terraform",
              "Name": "vpc-eu-central-1-eip-az-a"
            },
            "tags_all": {
              "Description": "Routes internal traffic to the internet through public subnet in AZ a",
              "ManagedBy": "Terraform",
              "Name": "vpc-eu-central-1-eip-az-a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eu_central_1.aws_internet_gateway.main",
            "module.eu_central_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:internet-gateway/igw-0d61597f549d073ba",
            "id": "igw-0d61597f549d073ba",
            "owner_id": "285942939694",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "vpc-eu-central-1-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "vpc-eu-central-1-igw"
            },
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "port_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:targetgroup/alb-to-central-app-tg/0c6236e17f055d0a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener-rule/app/customer-alb/876a4403a7b7e6e9/2c707fbe2ae90a4f/ea013d1a83b3c5ec",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "eu.cloudpedia.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener-rule/app/customer-alb/876a4403a7b7e6e9/2c707fbe2ae90a4f/ea013d1a83b3c5ec",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener/app/customer-alb/876a4403a7b7e6e9/2c707fbe2ae90a4f",
            "priority": 1,
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_acm_certificate.cert",
            "module.eu_central_1.aws_acm_certificate_validation.cert",
            "module.eu_central_1.aws_lb_target_group.alb_to_central_app",
            "module.eu_central_1.aws_route53_record.domain_validation_for_cert",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.customer_alb.aws_lb.main",
            "module.eu_central_1.module.customer_alb.aws_lb_listener.main",
            "module.eu_central_1.module.customer_alb.aws_security_group.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect_http_port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener-rule/app/customer-alb/876a4403a7b7e6e9/2c7a09f7e7c29d71/5d8ea9e1039b0ec8",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "eu.cloudpedia.xyz"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener-rule/app/customer-alb/876a4403a7b7e6e9/2c7a09f7e7c29d71/5d8ea9e1039b0ec8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener/app/customer-alb/876a4403a7b7e6e9/2c7a09f7e7c29d71",
            "priority": 1,
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_acm_certificate.cert",
            "module.eu_central_1.aws_acm_certificate_validation.cert",
            "module.eu_central_1.aws_route53_record.domain_validation_for_cert",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.customer_alb.aws_lb.main",
            "module.eu_central_1.module.customer_alb.aws_lb_listener.main",
            "module.eu_central_1.module.customer_alb.aws_security_group.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_to_central_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:targetgroup/alb-to-central-app-tg/0c6236e17f055d0a",
            "arn_suffix": "targetgroup/alb-to-central-app-tg/0c6236e17f055d0a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:targetgroup/alb-to-central-app-tg/0c6236e17f055d0a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:285942939694:loadbalancer/app/customer-alb/876a4403a7b7e6e9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-to-central-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1fd8273a2391683",
            "association_id": "eipassoc-0b8bb28ccbf739905",
            "connectivity_type": "public",
            "id": "nat-038fe6a5d48dd28a4",
            "network_interface_id": "eni-014171acc0c64835d",
            "private_ip": "192.168.5.185",
            "public_ip": "3.78.102.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09495c2050b8cf11c",
            "tags": {
              "Description": "Nat Gateway routes internal traffic to internet through public subnet in AZ a",
              "ManagedBy": "Terraform",
              "Name": "vpc-eu-central-1-nat-az-a"
            },
            "tags_all": {
              "Description": "Nat Gateway routes internal traffic to internet through public subnet in AZ a",
              "ManagedBy": "Terraform",
              "Name": "vpc-eu-central-1-nat-az-a"
            }
          },
          "dependencies": [
            "module.eu_central_1.aws_eip.main",
            "module.eu_central_1.aws_internet_gateway.main",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-222911696",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eea0ec141b3a50f1",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_network_acl.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3583741483",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0efd6037e97574482",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "192.168.0.0/20",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2783911733",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eea0ec141b3a50f1",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_network_acl.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "200",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1398966051",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0eea0ec141b3a50f1",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_network_acl.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2404968051",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0efd6037e97574482",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_to_external_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f27e8b5ce4c58ce31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-038fe6a5d48dd28a4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f27e8b5ce4c58ce3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_eip.main",
            "module.eu_central_1.aws_internet_gateway.main",
            "module.eu_central_1.aws_nat_gateway.main",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_route_table.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09824a505d8376de61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-038fe6a5d48dd28a4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09824a505d8376de6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_eip.main",
            "module.eu_central_1.aws_internet_gateway.main",
            "module.eu_central_1.aws_nat_gateway.main",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_route_table.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnet_to_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d61597f549d073ba",
            "id": "r-rtb-03d782ca76b55d8c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d782ca76b55d8c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_internet_gateway.main",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d61597f549d073ba",
            "id": "r-rtb-091c432b917a89d061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091c432b917a89d06",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_internet_gateway.main",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:vpc/vpc-040e187afad799bb4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-0398d11d83b8b06af",
            "default_route_table_id": "rtb-0abfb8007f9bc0d28",
            "default_security_group_id": "sg-07a0ec9dbd2ce8b8b",
            "dhcp_options_id": "dopt-02a727453e49dae9d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-040e187afad799bb4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abfb8007f9bc0d28",
            "owner_id": "285942939694",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "vpc-eu-central-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "vpc-eu-central-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.customer_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:loadbalancer/app/customer-alb/876a4403a7b7e6e9",
            "arn_suffix": "app/customer-alb/876a4403a7b7e6e9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "customer-alb-1064013781.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:loadbalancer/app/customer-alb/876a4403a7b7e6e9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "customer-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07c3c5d351b8c3a21"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09495c2050b8cf11c"
              },
              {
                "subnet_id": "subnet-0a0a8b80bbce9d074"
              }
            ],
            "subnets": [
              "subnet-09495c2050b8cf11c",
              "subnet-0a0a8b80bbce9d074"
            ],
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "vpc_id": "vpc-040e187afad799bb4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.customer_alb.aws_security_group.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.customer_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "http_port_443",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener/app/customer-alb/876a4403a7b7e6e9/2c707fbe2ae90a4f",
            "certificate_arn": "arn:aws:acm:eu-central-1:285942939694:certificate/ceb5bdcf-b79a-4872-ab15-10074015ead3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener/app/customer-alb/876a4403a7b7e6e9/2c707fbe2ae90a4f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:loadbalancer/app/customer-alb/876a4403a7b7e6e9",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_acm_certificate.cert",
            "module.eu_central_1.aws_acm_certificate_validation.cert",
            "module.eu_central_1.aws_route53_record.domain_validation_for_cert",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.customer_alb.aws_lb.main",
            "module.eu_central_1.module.customer_alb.aws_security_group.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "http_port_80",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener/app/customer-alb/876a4403a7b7e6e9/2c7a09f7e7c29d71",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:listener/app/customer-alb/876a4403a7b7e6e9/2c7a09f7e7c29d71",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:285942939694:loadbalancer/app/customer-alb/876a4403a7b7e6e9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_acm_certificate.cert",
            "module.eu_central_1.aws_acm_certificate_validation.cert",
            "module.eu_central_1.aws_route53_record.domain_validation_for_cert",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.customer_alb.aws_lb.main",
            "module.eu_central_1.module.customer_alb.aws_security_group.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.customer_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:security-group/sg-07c3c5d351b8c3a21",
            "description": "Security group for customer-alb applicaion load-balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing connection from the alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c3c5d351b8c3a21",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rule for http_port_443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rule for http_port_80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "customer-alb-sg20240329181657408000000008",
            "name_prefix": "customer-alb-sg",
            "owner_id": "285942939694",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "customer-alb-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "customer-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.customer_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing connection from the alb",
            "from_port": 0,
            "id": "sgrule-3463301780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07c3c5d351b8c3a21",
            "security_group_rule_id": "sgr-01297ee3f52f6e774",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.customer_alb.aws_security_group.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.customer_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "http_port_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress rule for http_port_443",
            "from_port": 443,
            "id": "sgrule-3645178745",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c3c5d351b8c3a21",
            "security_group_rule_id": "sgr-037ba6f7c6c9fa152",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_acm_certificate.cert",
            "module.eu_central_1.aws_acm_certificate_validation.cert",
            "module.eu_central_1.aws_route53_record.domain_validation_for_cert",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.customer_alb.aws_security_group.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "http_port_80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress rule for http_port_80",
            "from_port": 80,
            "id": "sgrule-3660281035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c3c5d351b8c3a21",
            "security_group_rule_id": "sgr-01fc7463ec7f5b924",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_acm_certificate.cert",
            "module.eu_central_1.aws_acm_certificate_validation.cert",
            "module.eu_central_1.aws_route53_record.domain_validation_for_cert",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.customer_alb.aws_security_group.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.private_subnet",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:network-acl/acl-0eea0ec141b3a50f1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0eea0ec141b3a50f1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "192.168.0.0/20",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "285942939694",
            "subnet_ids": [
              "subnet-0dc4a49eab5842305",
              "subnet-0e5aa0c0eaac6c35e"
            ],
            "tags": {
              "Description": "ACL for private-subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-acl"
            },
            "tags_all": {
              "Description": "ACL for private-subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-acl"
            },
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:route-table/rtb-0f27e8b5ce4c58ce3",
            "id": "rtb-0f27e8b5ce4c58ce3",
            "owner_id": "285942939694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038fe6a5d48dd28a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route table for private-subnet-a subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-a-route-table"
            },
            "tags_all": {
              "Description": "Route table for private-subnet-a subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-a-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:route-table/rtb-09824a505d8376de6",
            "id": "rtb-09824a505d8376de6",
            "owner_id": "285942939694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038fe6a5d48dd28a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route table for private-subnet-b subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-b-route-table"
            },
            "tags_all": {
              "Description": "Route table for private-subnet-b subnet",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-b-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.private_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03199ef939b28a87c",
            "route_table_id": "rtb-0f27e8b5ce4c58ce3",
            "subnet_id": "subnet-0e5aa0c0eaac6c35e"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_route_table.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c627429e21c186f2",
            "route_table_id": "rtb-09824a505d8376de6",
            "subnet_id": "subnet-0dc4a49eab5842305"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.aws_route_table.main",
            "module.eu_central_1.module.private_subnet.aws_subnet.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:subnet/subnet-0e5aa0c0eaac6c35e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.0.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5aa0c0eaac6c35e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285942939694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-eu-central-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-eu-central-1a"
            },
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:subnet/subnet-0dc4a49eab5842305",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc4a49eab5842305",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285942939694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-eu-central-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-eu-central-1b"
            },
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.private_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.public_subnet",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:network-acl/acl-0efd6037e97574482",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0efd6037e97574482",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "285942939694",
            "subnet_ids": [
              "subnet-09495c2050b8cf11c",
              "subnet-0a0a8b80bbce9d074"
            ],
            "tags": {
              "Description": "ACL for public-subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-acl"
            },
            "tags_all": {
              "Description": "ACL for public-subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-acl"
            },
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:route-table/rtb-03d782ca76b55d8c7",
            "id": "rtb-03d782ca76b55d8c7",
            "owner_id": "285942939694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d61597f549d073ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.17.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
              }
            ],
            "tags": {
              "Description": "Route table for public-subnet-a subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-a-route-table"
            },
            "tags_all": {
              "Description": "Route table for public-subnet-a subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-a-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:route-table/rtb-091c432b917a89d06",
            "id": "rtb-091c432b917a89d06",
            "owner_id": "285942939694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d61597f549d073ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.17.0.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
              }
            ],
            "tags": {
              "Description": "Route table for public-subnet-b subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-b-route-table"
            },
            "tags_all": {
              "Description": "Route table for public-subnet-b subnet",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-b-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e4fe0975479ae3f",
            "route_table_id": "rtb-03d782ca76b55d8c7",
            "subnet_id": "subnet-09495c2050b8cf11c"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f13f738c161bd714",
            "route_table_id": "rtb-091c432b917a89d06",
            "subnet_id": "subnet-0a0a8b80bbce9d074"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eu_central_1.module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:subnet/subnet-09495c2050b8cf11c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.4.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09495c2050b8cf11c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285942939694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-eu-central-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-eu-central-1a"
            },
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:285942939694:subnet/subnet-0a0a8b80bbce9d074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.6.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0a8b80bbce9d074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285942939694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-eu-central-1b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-eu-central-1b"
            },
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "dependencies": [
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.global_downstream",
      "mode": "managed",
      "type": "aws_route",
      "name": "ca_west_1_to_eu_central_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/20",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06aa09fa292b62128719218358",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06aa09fa292b62128",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_route_table_association.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_route_table_association.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection.requester",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.data.aws_caller_identity.accepter"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/20",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0542c00a0ac4edd6e719218358",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0542c00a0ac4edd6e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_route_table_association.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_route_table_association.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection.requester",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.data.aws_caller_identity.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.global_downstream",
      "mode": "managed",
      "type": "aws_route",
      "name": "eu_central_1_to_ca_west_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.17.0.0/20",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03d782ca76b55d8c73479219008",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d782ca76b55d8c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_route_table_association.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_route_table_association.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection.requester",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.data.aws_caller_identity.accepter"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.17.0.0/20",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-091c432b917a89d063479219008",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091c432b917a89d06",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_route_table_association.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_route_table_association.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection.requester",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.data.aws_caller_identity.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": false,
            "id": "pcx-0be212032bc7ddf8d",
            "peer_owner_id": "285942939694",
            "peer_region": "ca-west-1",
            "peer_vpc_id": "vpc-0913078db96c40076",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "ca-west-1-eu-central-1-vpc-peering-requester",
              "module": "global-downstream"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ca-west-1-eu-central-1-vpc-peering-requester",
              "module": "global-downstream"
            },
            "vpc_id": "vpc-040e187afad799bb4"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_route_table_association.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_route_table_association.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.data.aws_caller_identity.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0be212032bc7ddf8d",
            "peer_owner_id": "285942939694",
            "peer_region": "ca-west-1",
            "peer_vpc_id": "vpc-0913078db96c40076",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "ca-west-1-eu-central-1-vpc-peering-accepter",
              "module": "global-downstream"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ca-west-1-eu-central-1-vpc-peering-accepter",
              "module": "global-downstream"
            },
            "vpc_id": "vpc-040e187afad799bb4",
            "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_route_table_association.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_route_table_association.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection.requester",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.data.aws_caller_identity.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ca-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0be212032bc7ddf8d",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_route_table_association.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_route_table_association.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection.requester",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection_accepter.accepter",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.data.aws_caller_identity.accepter"
          ]
        }
      ]
    },
    {
      "module": "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-central-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0be212032bc7ddf8d",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-0be212032bc7ddf8d"
          },
          "dependencies": [
            "module.ca_west_1.aws_vpc.main",
            "module.ca_west_1.module.public_subnet.aws_network_acl.main",
            "module.ca_west_1.module.public_subnet.aws_route_table.main",
            "module.ca_west_1.module.public_subnet.aws_route_table_association.main",
            "module.ca_west_1.module.public_subnet.aws_subnet.main",
            "module.ca_west_1.module.public_subnet.data.aws_availability_zones.available",
            "module.eu_central_1.aws_vpc.main",
            "module.eu_central_1.module.public_subnet.aws_network_acl.main",
            "module.eu_central_1.module.public_subnet.aws_route_table.main",
            "module.eu_central_1.module.public_subnet.aws_route_table_association.main",
            "module.eu_central_1.module.public_subnet.aws_subnet.main",
            "module.eu_central_1.module.public_subnet.data.aws_availability_zones.available",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection.requester",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.aws_vpc_peering_connection_accepter.accepter",
            "module.global_downstream.module.vpc_peering_ca_west_1_eu_central_1.data.aws_caller_identity.accepter"
          ]
        }
      ]
    }
  ]
}